# ubuntu-gui-testing

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yaml  symlink-checker.yaml
common/: common.resource
runner/: README.md  pyproject.toml  qemu-args.json
runner/artifacts/: output.xml
runner/templates/: image_domain_template.xml  iso_domain_template.xml  overlay_template.xml  pool_template.xml  volume_template.xml
runner/tests/: conftest.py  test_cli.py  test_config.py  test_domain_name.py  test_domain_xml_extraction.py  test_image_runner.py  test_iso_runner.py  test_main.py  test_qemu.py  test_runner.py  test_spawn_yarf.py  test_ssh.py  test_template_rendering.py  test_utils.py  test_vnc.py  test_yarf.py
runner/ubuntu_gui_testing_runner/: __init__.py  __main__.py  base.py  cli.py  config.py  constants.py  defaults.py  image_runner.py  iso_runner.py  qemu.py  runner.py  ssh.py  utils.py  vnc.py  yarf.py
tests/desktop-installer/: generic-stonking  installer.resource
tests/desktop-security-center/: desktop-security-center.resource
tests/desktop-security-center/desktop-security-center-camera-permissions-lifecycle/: desktop-security-center.robot
tests/desktop-security-center/plans/: permission-prompting.yaml  tpm-fde.yaml
tests/firefox-example/plans/: extended.yaml  regular.yaml
tests/firmware-updater/plans/: bitlocker.yaml  plain.yaml  tpm-fde.yaml
tests/gnome-shell/plans/: regular.yaml
tests/java-tck/: java-tck.resource
tests/java-tck/java-tck-simple-button/: java-tck-simple-button.robot
tests/multipass/plans/: regular.yaml
tests/nautilus/: nautilus.resource
tests/nautilus/nautilus-basic/: nautilus-basic.robot
tests/nautilus/plans/: regular.yaml
tests/prompting/: prompting.resource
tests/prompting/plans/: home-cli.yaml  home-common-ui.yaml  home-parallel.yaml  home-single.yaml  home.yaml
tests/prompting/prompting-camera-cheese/: prompting-camera-cheese.robot
tests/prompting/prompting-home-audacity/: prompting-home-audacity.robot
tests/prompting/prompting-home-curl/: prompting-home-curl.robot
tests/prompting/prompting-home-docker/: prompting-home-docker.robot
tests/prompting/prompting-home-firefox-download-single/: prompting-home-firefox-download-single.robot
tests/prompting/prompting-home-gimp/: prompting-home-gimp.robot
tests/prompting/prompting-home-lxd/: prompting-home-lxd.robot
tests/prompting/prompting-home-notepad-plus-plus/: prompting-home-notepad-plus-plus.robot
tests/prompting/prompting-home-ollama/: prompting-home-ollama.robot
tests/prompting/prompting-home-shotwell/: prompting-home-shotwell.robot
tests/prompting/prompting-home-thunderbird/: prompting-home-thunderbird.robot
tests/prompting/prompting-home-vlc/: prompting-home-vlc.robot
tests/prompting/prompting-home-yq-firefox-parallel/: prompting-home-yq-firefox-parallel.robot
tests/prompting/prompting-home-yq-parallel/: prompting-home-yq-parallel.robot
tests/snap-tpmctl/: snap-tpmctl.resource
(+10 files in other folders)
